def perform_multiple_operations(Client, post_id):
    """
    Perform multiple operations using the gRPC client.

    Parameters:
    - Client: An instance of the gRPC client.
    - post_id (str): The ID of the post to perform operations on.

    Returns:
    - Most upvoted comment and its replies as a result of the operations.
    """
    post = Client.get_post(post_id)
    most_upvoted_comment = Client.get_post_top_comments(post_id, 1)

    if most_upvoted_comment == None:
        return None
    comment_id = most_upvoted_comment.comments[0].comment.comment_id

    most_upvoted_comment_and_reply = Client.get_expanded_comment_branch(comment_id, 1)

    return most_upvoted_comment_and_reply

